# Self-Awakening-Scheduler

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: model_pool.example.json  resource_profiles.example.json
docs/: EXAMPLES.md  INTEGRATION.md  METHODOLOGY.md
src/: __init__.py  gradient_router.py  model_pool_updater.py  platform_config.py  platform_discovery.py  smart_scheduler.py  usage_monitor.py
tests/: test_scheduler.py
